@@ -1,4 +1,4 @@
 # $Header$ -*-makefile-*-
 
-man_MANS = ncap2.1 ncatted.1 ncbo.1 ncclimo.1 nces.1 ncecat.1 ncflint.1 ncks.1 nco.1 ncpdq.1 ncra.1 ncrcat.1 ncremap.1 ncrename.1 ncwa.1 ncz2psx.1
+man_MANS = ncap2.1 ncatted.1 ncbo.1 ncclimo.1 nces.1 ncecat.1 ncflint.1 ncks.1 nco.1 ncpdq.1 ncra.1 ncrcat.1 ncremap.1 ncrename.1 ncwa.1 ncz2psx.1 diwg_chk.1
 EXTRA_DIST = $(man_MANS)
